# network-analyze-tool

./: .gitignore  AGENTS.md  INJECT_IMPROVEMENTS_SUMMARY.md  INJECT_REFACTOR_SUMMARY.md  OSPF6_BGP_INTERFACE_FIX.md  debug_clab_links.py  debug_generate_all_links.py  debug_generate_links.py  debug_interface_assignment.py  debug_special.py  debug_torus.py  debug_torus_interfaces.py  debug_torus_links.py  pyproject.toml  res.csv  run_topo_gen.py  test_dummy_gen_validation.py  test_end_to_end.py  test_protocol_detection.py  test_topology_fixes.py
config/: dm6_6_sample.py
converge_analyze/: go.mod  go.sum  main.go
converge_analyze_cpp/: CMakeLists.txt  PERMISSIONS_VERIFICATION.md  README-STATIC.md  README.md  UNIFIED_ARCHITECTURE.md  build-static.sh  converge.json  convergence_monitor.cpp  convergence_monitor.h  logger.cpp  logger.h  main.cpp  netlink_monitor.cpp  netlink_monitor.h  test_file_permissions.cpp
docs/examples/: README.md  type_validation.py
experiment_utils/: README.md  README_OPTIMIZATION.md  SETUP_IMPROVEMENTS.md  auto.py  clear_logs.py  csv_converter.py  execute_in_batches.py  execute_in_batches.sh  execute_on_all.py  fping2csv_functional.py  inject.py  log2csv_functional.py  pcap_to_csv.py  pcap_to_csv_pcapkit.py  plotter.py  setup.sh  simple_delay.py  test_setup.sh  utils.py
experiment_utils/draw/: converge_draw_10x10.py  converge_draw_15x15.py  converge_draw_20x20.py  converge_draw_5x5.py  converge_draw_6x6.py  draw_from_csv.py  draw_pcap.py  fping_outage_draw_10x10.py  fping_outage_draw_15x15.py  fping_outage_draw_20x20.py  fping_outage_draw_5x5.py  fping_outage_draw_6x6.py  pcap_draw_from_json.py
experiment_utils/setup/: raw_setup.sh  tn2.sh  tunning.sh  universal-host-tuning.sh
old_topo_gen/topo_gen/: generate_ospfv3_functional.py  generate_ospfv3_grid.py  generate_ospfv3_torus.py
online-service/: confgen.py  config.py  experiment100.ipynb  main.py
online-service/docs/: api.md  config-examples.md  config-templete.md  config.yaml
online-service/example/: write_conf.py
packet-analyze/: main.py
test/: netem.sh
topo_gen/: __main__.py  cli.py  cli_special.py  engine.py  filesystem.py  links.py
topo_gen/config/: defaults.py  settings.py
topo_gen/core/: models.py  types.py
topo_gen/generators/: __init__.py  config.py  engine.py  templates.py
topo_gen/generators/templates/: daemons.j2  isisd.conf.j2  ospf6d.conf.j2  vtysh.conf.j2  zebra.conf.j2
topo_gen/topology/: __init__.py  base.py
trash/: main.go
